@@ -19,6 +19,8 @@ documents those changes that are of interest to users and admins.
  -- Added the ability to configure PreemptMode on a per-partition basis.
  -- Change slurmctld's default thread limit count to 1024, but adjust that down
     as needed based upon the processs's resource limits.
+ -- Removed the non-functional "SystemCPU" and "TotalCPU" reporting fields from
+    sstat and updated man page
 
 * Changes in SLURM 2.2.0.pre6
 =============================
